--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Lorem ipsum</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde assumenda
+      non vero doloremque nam officia sunt quod ratione quo quasi delectus
+      commodi eius rerum, sed molestias deserunt? In, voluptates placeat.
+    </p>
+  </body>
 </html>
