Added text to Contact page, added links to pages

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Lorem ipsum</h1>
+    <h1>Lorem ipsum home</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde assumenda
       non vero doloremque nam officia sunt quod ratione quo quasi delectus
       commodi eius rerum, sed molestias deserunt? In, voluptates placeat.
     </p>
+    <a href="/contact.html">Contact</a>
+    <br />
+    <a href="/photo.html">Photo</a>
   </body>
 </html>
