--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Lorem ipsum contact</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo non facere
+      eaque accusantium odio fugiat aliquam delectus illum, in voluptatem
+      aperiam ullam, qui suscipit nisi autem facilis necessitatibus at
+      asperiores.
+    </p>
+    <a href="/index.html">Home</a>
+    <br />
+    <a href="/photo.html">Photo</a>
+  </body>
 </html>
