Added a photo and links to photo page

--- a/photo.html
+++ b/photo.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="/img/kitten.jfif" alt="kitten" width="500px" />
+    <a href="/index.html">Home</a>
+    <a href="/contact.html">Contact</a>
+  </body>
 </html>
