--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      h1 {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+      a {
+        display: flex;
+        justify-content: center;
+        color: brown;
+      }
+      body {
+        background-color: beige;
+        color: brown;
+      }
+    </style>
   </head>
   <body>
     <h1>Lorem ipsum contact</h1>
@@ -15,7 +32,6 @@
       asperiores.
     </p>
     <a href="/index.html">Home</a>
-    <br />
     <a href="/photo.html">Photo</a>
   </body>
 </html>
