--- a/photo.html
+++ b/photo.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Photo</title>
+    <style>
+      img {
+        display: block;
+        margin: 30px auto;
+      }
+      a {
+        display: flex;
+        justify-content: center;
+        color: brown;
+      }
+      body {
+        background-color: beige;
+        color: brown;
+      }
+    </style>
   </head>
   <body>
     <img src="/img/kitten.jfif" alt="kitten" width="500px" />
+    <br />
     <a href="/index.html">Home</a>
     <a href="/contact.html">Contact</a>
   </body>
