--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="Homepage" content="Lorem ipsum home" />
+    <title>Viktorija Puka | Croissant | Homepage</title>
     <style>
       h1 {
         text-align: center;
@@ -30,7 +30,7 @@
       non vero doloremque nam officia sunt quod ratione quo quasi delectus
       commodi eius rerum, sed molestias deserunt? In, voluptates placeat.
     </p>
-    <a href="/contact.html">Contact</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/contact.html" title="Contact page">Contact</a>
+    <a href="/photo.html" title="Photo page">Photo</a>
   </body>
 </html>
