--- a/photo.html
+++ b/photo.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <meta
+      name="Kitten named Croissant"
+      content="Photo of a kitten named Croissant"
+    />
+    <title>Viktorija Puka | Croissant | Photo</title>
     <style>
       img {
         display: block;
@@ -24,7 +27,7 @@
   <body>
     <img src="/img/kitten.jfif" alt="kitten" width="500px" />
     <br />
-    <a href="/index.html">Home</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/index.html" title="Homepage">Home</a>
+    <a href="/contact.html" title="Contact page">Contact</a>
   </body>
 </html>
