--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="Contact" content="Lorem ipsum contact" />
+    <title>Viktorija Puka | Croissant | Contact</title>
     <style>
       h1 {
         text-align: center;
@@ -31,7 +31,7 @@
       aperiam ullam, qui suscipit nisi autem facilis necessitatibus at
       asperiores.
     </p>
-    <a href="/index.html">Home</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/index.html" title="Homepage">Home</a>
+    <a href="/photo.html" title="Photo page">Photo</a>
   </body>
 </html>
